cabal-version: 2.2
name: byte-containers
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2020 Andrew Martin
-- category:
build-type: Simple
extra-source-files: CHANGELOG.md

library
  -- other-modules:
  -- other-extensions:
  build-depends:
    , base >=4.12 && <5
    , wide-word
    , primitive >=0.7 && <0.8
    , run-st >=0.1 && <0.2
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Data.Set.Word8
    Data.Map.Word8

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall -O2
  build-depends:
    , base >=4.11.1 && <5
    , byteslice
    , byte-containers
    , primitive
    , quickcheck-classes >=0.6.4
    , tasty
    , tasty-quickcheck
